# spirv-parser-template

./: .gitmodules  CMakeLists.txt  README.md
res/: shader.frag  shader.vert  shaders.spv  texture2d.frag  texture2d.spv
src/: main.cpp  spirv_parser.cpp  spirv_parser.hpp
